move landing and deps to new react19 app
